--- a/config/default/manager_image_patch.yaml
+++ b/config/default/manager_image_patch.yaml
@@ -8,5 +8,5 @@ spec:
     spec:
       containers:
       # Change the value of image field below to your controller image URL
-      - image: gcr.io/pingcap-public/gardener/etcd-druid:0.2.3
+      - image: gcr.io/pingcap-public/gardener/etcd-druid:v0.2.3
         name: druid
